Updating installation page